[tool.poetry]
name = "forestiler"
version = "0.1.0"
description = ""
authors = ["Florian Katerndahl <florian@katerndahl.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
rasterio = "^1.3.10"
shapely = "^2.0.4"
numpy = "^1.26.4"
tqdm = "^4.66.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
